ansible/roles/prometheus/files/alertmanager-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-server
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: alertmanager.home.beabys.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager-operated
            port:
              number: 9093
